<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:text="Title 30 dp top of parent!"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                android:textSize="50sp"
                app:layout_constraintTop_toBottomOf="@+id/text"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

                     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TO"
                         tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="Enter your message"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/text2"
                tools:ignore="MissingConstraints" />


            <Button
                android:id="@+id/click"
                android:textColor="#03A9F4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/text2"
                android:layout_marginTop="60dp"
                app:layout_constraintLeft_toRightOf="@+id/message"
                android:layout_marginLeft="50dp"
                tools:ignore="MissingConstraints"
                android:onClick="onClick"
                android:text="@string/click"/>

            <EditText
                android:id="@+id/message2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="Center message"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="#3ABD0A"
                android:textColorHint="#1D82AF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/click_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/message2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                android:onClick="onClick"
                android:text="@string/click_me"/>

            <EditText
                android:id="@+id/message3"
                android:textColorHint="#177A10"
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/click_me"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="Enter phone"
                android:layout_margin="16dp"
                android:inputType="phone"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/click_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#3A9C3B"
                app:layout_constraintTop_toBottomOf="@+id/message3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="onClick"
                android:text="@string/click_phone"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="Radiobox 1"
                    android:id="@+id/r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:text="Radiobox 2"
                    android:id="@+id/r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:text="Radiobox 3"
                    android:id="@+id/r3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <Button
                android:id="@+id/click_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#B50F56"
                app:layout_constraintTop_toBottomOf="@+id/r3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="showIndex"
                android:text="@string/click_radio"/>

            <CheckBox
                android:id="@+id/enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="enabled"
                android:textSize="26sp"
                android:onClick="onCheckboxClick"
                app:layout_constraintTop_toBottomOf="@+id/click_radio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/next_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#3041B1"
                app:layout_constraintTop_toBottomOf="@+id/enabled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="nextActivity"
                android:text="@string/next_activity"/>

        </LinearLayout>
   </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>